Fix flap z-indexing

--- a/_assets/css/less/partials/content.less
+++ b/_assets/css/less/partials/content.less
@@ -511,7 +511,7 @@
 	}
 	to {
 		background-position: -50.5em;
-		z-index: 10;
+		z-index: 11;
 	}
 }
 @keyframes corner {
@@ -521,13 +521,13 @@
 	}
 	to {
 		background-position: -50.5em;
-		z-index: 10;
+		z-index: 11;
 	}
 }
 @-webkit-keyframes corner-back {
 	from {
 		background-position: -50.5em;
-		z-index: 10;
+		z-index: 11;
 	}
 	to {
 		background-position:  -0.5em;
@@ -537,7 +537,7 @@
 @keyframes corner-back {
 	from {
 		background-position: -50.5em;
-		z-index: 10;
+		z-index: 11;
 	}
 	to {
 		background-position:  -0.5em;
